fix : added bottom spacing for add to cart button

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
@@ -1341,6 +1341,7 @@ p.demo_store[data-position="bottom"],
 .woocommerce div.product form.cart .button {
   vertical-align: middle;
   float: right;
+  margin-bottom: 1em;
 }
 
 .woocommerce div.product form.cart .button.single_add_to_cart_button {
