--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -1135,6 +1135,7 @@ p.demo_store,
 			.button {
 				vertical-align: middle;
 				float: left;
+				margin-bottom: 1em;
 
 				&.single_add_to_cart_button {
 					padding: 10px 20px;
